feat: added the home page + responsive code :sparkles:

--- a/style.css
+++ b/style.css
@@ -92,6 +92,134 @@ header {
     height: 150px;
 }
 
+/* PÁGINA HOME */
+section#home {
+    height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 5rem;
+}
+#home .arabesco {
+    width: 80%;
+}
+#home .arabesco img {
+    height: 4rem;
+}
+
+#home .imagem_home img{
+    width: 40rem;
+}
+
+#home .texto {
+    width: 100%;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    display: flex;
+}
+
+#home .texto p {
+    color: antiquewhite;
+    flex: 1;
+    padding-left: 10rem;
+    padding-right: 10rem;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+#home .texto .botoes {
+    display: flex;
+    flex-direction: column;
+    margin-right: 10rem;
+}
+#home .texto .botoes h4 {
+    color: #DBAB59;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+#home .texto .botoes a button img {
+    width: 1.2rem;
+    height: 1.2rem;
+}
+
+#home .texto .botoes a {
+    margin-bottom: 2rem;
+}
+
+.button-85 {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-85:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #ff0000,
+      #ff7300,
+      #fffb00,
+      #48ff00,
+      #00ffd5,
+      #002bff,
+      #7a00ff,
+      #ff00c8,
+      #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+}
+
+.button-85:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
 /* Para deixar responsivo */
 @media(max-width: 992px){
     .navbar .links {
@@ -103,6 +231,48 @@ header {
     .dropdown_menu {
         display: block;
     }
+    #home .arabesco{
+        display: none;
+    }
+    #home .imagem_home img{
+        width: 30rem;
+        margin: 0;
+    }
+    #home .texto {
+        margin: 0;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+        display: block;
+    }
+    #home .texto p {
+        color: antiquewhite;
+        font-family: "Jost", sans-serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+        margin: 1rem;
+        padding: 0.5rem 0;
+    }
+    #home .texto .botoes {
+        display: flex;
+        flex-direction: column;
+        margin: 1rem;
+        padding: 0.5rem 0;
+    }
+    #home .texto .botoes h4 {
+        color: #DBAB59;
+        font-family: "Jost", sans-serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.2rem;
+    }
+    #home .texto .botoes a button img {
+        width: 1.2rem;
+        height: 1.2rem;
+    }
+    #home .texto .botoes a {
+        margin-bottom: 2rem;
+    }
 }
 
 @media(max-width: 576px){
@@ -110,5 +280,47 @@ header {
         left: 2rem;
         top: 6rem;
         width: unset;
+    }
+    #home .arabesco{
+        display: none;
+    }
+    #home .imagem_home img{
+        width: 20rem;
+        margin: 0;
+    }
+    #home .texto {
+        margin: 0;
+        padding-left: 0.1rem;
+        padding-right: 0.1rem;
+        display: block;
+    }
+    #home .texto p {
+        color: antiquewhite;
+        font-family: "Jost", sans-serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+        margin: 1rem;
+        padding: 0.5rem 0;
+    }
+    #home .texto .botoes {
+        display: flex;
+        flex-direction: column;
+        margin: 1rem;
+        padding: 0.5rem 0;
+    }
+    #home .texto .botoes h4 {
+        color: #DBAB59;
+        font-family: "Jost", sans-serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.2rem;
+    }
+    #home .texto .botoes a button img {
+        width: 1.2rem;
+        height: 1.2rem;
+    }
+    #home .texto .botoes a {
+        margin-bottom: 2rem;
     }
 }
